<resources>
    <string name="app_name">فرمول جدید</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="label_physical">فیزیکی</string>
    <string name="label_virtual">مجازی</string>
    <string name="label_packaging_goods_services">کالا یا خدمات بسته‌بندی</string>
    <string name="label_add_packaging">افزودن کالا یا خدمات بسته‌بندی</string>
    <string name="label_packaging">بسته‌بندی</string>
    <string name="label_add_material">افزودن مواد اولیه</string>
    <string name="label_edit_material">ویرایش مواد اولیه</string>
    <string name="label_edit_packaging">ویرایش کالا یا خدمات بسته‌بندی</string>
    <string name="label_add_new_product">افزودن محصول جدید</string>
    <string name="label_add_new_packaging">افزودن بسته‌بندی جدید</string>
    <string name="label_edit_new_packaging">ویرایش بسته‌بندی</string>
    <string name="label_edit_product">ویرایش محصول</string>
    <string name="label_edit">ویرایش</string>
    <string name="label_price">قیمت</string>
    <string name="label_product_price">قیمت محصول :</string>
    <string name="label_price_unit">قیمت محصول (یک کیلوگرم)\n(ریال)</string>
    <string name="label_price_packaging_unit">قیمت کالا\n(ریال)</string>
    <string name="label_price_packaging_product_unit">قیمت بسته و محصول\n(ریال)</string>
    <string name="label_price_unit_item">قیمت محصول (یک کیلوگرم) :</string>
    <string name="label_price_kg">قیمت (ریال)</string>
    <string name="label_price_total_unit">قیمت کل\n(ریال)</string>
    <string name="label_price_star">قیمت به کیلوگرم * :</string>
    <string name="label_quantity_kg">مقدار (کیلوگرم)</string>
    <string name="label_quantity_g">مقدار (گرم)</string>
    <string name="label_price_item">قیمت  :</string>
    <string name="label_price_item_star">قیمت * :</string>
    <string name="label_amount_item">مقدار تولید :</string>
    <string name="label_kg">کیلوگرم</string>
    <string name="label_g">گرم</string>
    <string name="label_current_price">قیمت فعلی\n(ریال)</string>
    <string name="label_day_price_item">قیمت روز</string>
    <string name="label_day_price">قیمت روز\n(یک کیلوگرم)</string>
    <string name="label_desc">توضیح</string>
    <string name="label_description">توضیحات</string>
    <string name="label_old_price">قیمت قبلی\n(ریال)</string>
    <string name="label_new_price">قیمت جدید\n(ریال)</string>
    <string name="label_date">تاریخ</string>
    <string name="label_date_item">تاریخ :</string>
    <string name="label_final_product">محصول نهایی</string>
    <string name="label_intermediate_product">محصول میانی</string>
    <string name="label_history">تاریخچه قیمت</string>
    <string name="label_historys">تاریخچه قیمت ها</string>
    <string name="label_packing_visit">برنامه‌ی بسته‌بندی</string>

    <string name="label_product_production_packaging_cost">مبلغ تولید محصول و بسته بندی :</string>
    <string name="label_packaging_remaining">باقی مانده مقدار بسته بندی :</string>
    <string name="label_price_for_production">قیمت برای تولید محصول :</string>
    <string name="label_packaging_amounts_production">بسته بندی برای تولید</string>
    <string name="label_amounts_materials_production">مقادیر مواد برای تولید</string>
    <string name="label_from_product">از محصول </string>

    <string name="label_packaging_name_star">نام بسته بندی * :</string>
    <string name="label_packaging_weight_star">وزن بسته بندی(گرم) * :</string>
    <string name="label_packaging_weight">وزن بسته بندی :</string>
    <string name="label_packaging_services_star">نام کالا یا خدمات * :</string>
    <string name="label_material_name_star">نام مواد اولیه * :</string>
    <string name="label_name">نام</string>
    <string name="label_delivery_quantity">مقدار تحویلی</string>
    <string name="label_production_quantity">مقدار تولیدی</string>
    <string name="label_request_quantity">مقدار درخواستی</string>
    <string name="label_dosage_quantity">مقدار مصرفی</string>
    <string name="label_choose">انتخاب</string>
    <string name="label_material_name">نام مواد اولیه</string>
    <string name="label_material_name_item">نام مواد اولیه:</string>
    <string name="label_packaging_name_item">نام کالا یا خدمات:</string>
    <string name="label_packaging_services">نام کالا یا خدمات</string>
    <string name="label_quantity_unit">مقدار\n(گرم)</string>
    <string name="label_percentage">درصد(%)</string>
    <string name="label_quantity_number_unit">مقدار\n(عدد)</string>
    <string name="label_quantity_number_unit_item">مقدار(عدد)</string>
    <string name="label_quantity_weight_unit">وزن\n(گرم)</string>
    <string name="label_quantity_weight_unit_item">وزن(گرم)</string>
    <string name="label_sum_total">جمع</string>
    <string name="label_product_name">نام محصول :</string>
    <string name="label_product_amount">مقدار محصول (گرم) :</string>
    <string name="label_product_amount_item">مقدار محصول :</string>
    <string name="label_product_name_item">نام محصول</string>
    <string name="label_product_name_star">نام محصول * :</string>
    <string name="label_number_unit">تعداد</string>
    <string name="label_remainder">مانده</string>

    <string name="label_select_material">انتخاب مواد اولیه:</string>
    <string name="label_search">جستجو کنید...</string>
    <string name="label_close">بستن</string>
    <string name="label_delete">حذف</string>
    <string name="label_save">ذخیره</string>
    <string name="label_ok">باشه</string>
    <string name="label_create_date">تاریخ ایجاد:</string>
    <string name="label_last_update_date">آخرین تاریخ آپدیت قیمت</string>
    <string name="label_update_date">تاریخ آپدیت:</string>
    <string name="label_product_description">توضیحات محصول:</string>
    <string name="label_packaging_description">توضیحات بسته بندی :</string>
    <string name="label_dialog_delete">آیا از حذف آیتم اطمینان دارید؟</string>
    <string name="label_pink_color">رنگ صورتی:</string>
    <string name="label_green_color">رنگ سبز:</string>
    <string name="label_product">محصول</string>
    <string name="label_products">محصولات</string>
    <string name="label_material">مواد اولیه</string>
    <string name="label_material_list">لیست مواد اولیه</string>
    <string name="label_product_list">لیست محصولات</string>
    <string name="label_packaging_list">لیست بسته بندی</string>
    <string name="label_calculate_price_reserve">محاسبه قیمت و ذخیره</string>
    <string name="label_production_schedule">برنامه تولید</string>
    <string name="label_starred_items_products">* آیتم های ستاره دار محصول هستند</string>

    <string name="label_report_product">گزارش جزییات محصول</string>
    <string name="label_product_detail">جزییات محصول</string>
    <string name="label_packaging_detail">جزییات بسته بندی</string>
    <string name="label_packaging_production_detail">جزییات تولید بسته بندی</string>
    <string name="label_company_name">شرکت پخش اندیشه درستکاران پارس</string>
    <string name="label_packaging_request_form">فرم درخواست بسته بندی</string>
    <string name="label_report_packaging_detail">گزارش جزییات بسته بندی</string>
    <string name="label_production_schedule_product">برنامه تولید محصول</string>
    <string name="label_schedule_product_detail">جزییات تولید محصول</string>
    <string name="label_register">ثبت نام</string>
    <string name="label_mobile">شماره همراه</string>
    <string name="label_name_family">نام و نام خانوادگی</string>
    <string name="label_star">*</string>

    <string name="msg_packaging_consumption_saved">مصرف بسته‌بندی‌ها ذخیره شد</string>
    <string name="msg_packaging_consumption_edit">مصرف بسته‌بندی‌ها ویرایش شد</string>
    <string name="error_request_fields">لطفا تمام فیلدهارا پر کنید</string>
    <string name="error_no_item">آیتمی یافت نشد</string>
    <string name="error_no_material">مواد اولیه ای یافت نشد</string>
    <string name="error_no_product">محصولی یافت نشد</string>
    <string name="error_enter_product_name">لطفا نام محصول را وارد کنید</string>
    <string name="error_enter_packaging_name">لطفا نام بسته بندی را وارد کنید</string>
    <string name="error_enter_packaging_weight">لطفا وزن بسته بندی را وارد کنید</string>
    <string name="error_no_material_selected">لطفاً حداقل یک ماده اولیه انتخاب کنید</string>
    <string name="error_no_packaging_selected">لطفاً حداقل یک مقدار برای بسته بندی انتخاب کنید</string>
    <string name="error_first_enter_material">ابتدا مواد اولیه را اضافه کنید</string>
    <string name="error_first_enter_packaging">ابتدا بسته بندی را اضافه کنید</string>
    <string name="error_enter_valid_number">عدد معتبر وارد کنید</string>
    <string name="error_all_fields_required">همه فیلدها الزامی هستند</string>
    <string name="error_no_packaging_registered">هیچ بسته‌بندی‌ای ثبت نشده است!</string>
    <string name="error_entered_quantity_greater_total_weight">مقدار وارد شده از وزن کل بیشتر است</string>
    <string name="error_packaging_used_cannot_removed">این مواد در بسته‌بندی‌های دیگر استفاده شده و قابل حذف نیست.</string>
    <string name="error_material_used_cannot_removed">این ماده در محصولات استفاده شده و قابل حذف نیست.</string>

    <string-array name="product_filter_options">
        <item>همه محصولات</item>
        <item>محصولات نهایی</item>
        <item>محصولات میانی</item>
    </string-array>

</resources>

