<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <com.google.android.material.textview.MaterialTextView
        style="@style/MediumTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_large"
        android:text="@string/label_dialog_delete"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_large"
            android:text="@string/label_close" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:backgroundTint="@android:color/holo_red_light"
            android:paddingHorizontal="@dimen/padding_bit"
            android:text="@string/label_delete"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
