<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_large"
    android:background="@drawable/dialog_background"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleDialog"
            style="@style/MediumBoldTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_add_new_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/padding_medium"
            android:background="@color/color_primary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etProductName"
                style="@style/MediumBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvTitleProductName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitleProductName"
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_name_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llProductDescription"
        android:layout_below="@+id/llTop"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@drawable/dialog_table"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cvSearchMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:background="@drawable/background_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/svProductMaterial"
                style="@style/MediumTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:layoutDirection="rtl"
                android:queryHint="@string/label_search"
                android:textAppearance="?android:attr/textAppearanceSearchResultTitle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="1dp"
            android:background="@color/color_light_yellow"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_small"
            android:paddingVertical="@dimen/padding_bit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_bit"
                android:text="@string/label_material" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/padding_large"
                android:gravity="end"
                android:text="@string/label_green_color"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_bit"
                android:text="@string/label_product" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/label_pink_color"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@color/gray_ccc" />

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SmallBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/label_price_total_unit" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_ccc" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SmallBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/label_price_unit" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_ccc" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SmallBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/label_quantity_unit" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_ccc" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SmallBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.3"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_small"
                android:text="@string/label_name" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_ccc" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMaterials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:background="@android:color/white" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llProductDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etProductDescription"
            style="@style/MediumTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:background="@drawable/background_edittext"
            android:gravity="top|start"
            android:hint="@string/label_product_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="2"
            android:padding="@dimen/padding_small" />

        <RadioGroup
            android:id="@+id/rgProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbIntermediateProduct"
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_intermediate_product" />

            <RadioButton
                android:id="@+id/rbFinalProduct"
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_final_product" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/label_close" />

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_save" />

    </LinearLayout>

</RelativeLayout>
